--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,7 +32,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Movies_v2</title>
+    <title>Movi-e</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
